Bug#45495 multiple managment servers fail to start - Make it possible to start a second ndb_mgmd with --initial with exactly   the same configuration as an already started and confirmed ndb_mgmd.

Implementation details:
- When refusing a CONFIG_CHECK, send the confirmed
config back so that requestor can do "node recovery"
from it.
- If the config returned in CONFIG_CHECK_REF is exactly equal to
own config.ini - use it to do "node recovery"
- Add test program